k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacemongerd
  namespace: spacemonger
  labels:
    app: spacemonger
    component: spacemongerd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spacemonger
      component: spacemongerd
  template:
    metadata:
      labels:
        app: spacemonger
        component: spacemongerd
    spec:
      containers:
      - name: spacemongerd
        image: bloveless/spacemongerd:0.1.0-alpha.55
        command: ["/app/spacemongerd"]
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacemonger-api
  namespace: spacemonger
  labels:
    app: spacemonger
    component: spacemonger-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spacemonger
      component: spacemonger-api
  template:
    metadata:
      labels:
        app: spacemonger
        component: spacemonger-api
    spec:
      containers:
        - name: spacemonger-api
          image: bloveless/spacemonger-api:0.1.0-alpha.9
          command: ["/app/spacemonger-api"]
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spacemonger-ui
  namespace: spacemonger
  labels:
    app: spacemonger
    component: spacemonger-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spacemonger
      component: spacemonger-ui
  template:
    metadata:
      labels:
        app: spacemonger
        component: spacemonger-ui
    spec:
      containers:
        - name: spacemonger-ui
          image: bloveless/spacemonger-ui:0.1.0-alpha.8
      restartPolicy: Always
