k8s/jobs.yaml
apiVersion: batch/v1
kind: Pod
metadata:
  name: spacetraders-scan-system
  namespace: spacetraders
  labels:
    app: spacetraders-scan-system
spec:
  template:
    spec:
      containers:
        - name: spacetraders
          image: bloveless/spacetraders:0.1.0-alpha.4
          command: ["/app/spacetraders-rs"]
      restartPolicy: Never
