k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spacemongerd
  namespace: spacemonger
  labels:
    app: spacemonger
    component: spacemonger
spec:
  containers:
  - name: spacemongerd
    image: bloveless/spacemongerd:0.1.0-alpha.9
    command: ["/app/spacemongerd"]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: spacemonger-api
  namespace: spacemonger
  labels:
    app: spacemonger
    component: spacemonger-api
spec:
  containers:
    - name: spacemonger-api
      image: bloveless/spacemonger-api:0.1.0-alpha.5
      command: ["/app/spacemonger-api"]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: spacemonger-ui
  namespace: spacemonger
  labels:
    app: spacemonger
    component: spacemonger-ui
spec:
  containers:
    - name: spacemonger-ui
      image: bloveless/spacemonger-ui:0.1.0-alpha.5
  restartPolicy: Always
