k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spacemonger-api-service
  namespace: spacemonger
spec:
  type: ClusterIP
  selector:
    app: spacemonger
    component: spacemonger-api
  ports:
    - name: spacemonger-api
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spacemonger-ui-service
  namespace: spacemonger
spec:
  type: ClusterIP
  selector:
    app: spacemonger
    component: spacemonger-ui
  ports:
    - name: spacemonger-ui
      port: 80
      targetPort: 80
