k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spacemonger-api-ingress
  namespace: spacemonger
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - spacemonger.brennonloveless.com
      secretName: spacemonger-crt
  rules:
    - host: spacemonger.brennonloveless.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spacemonger-api-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spacemonger-ui-service
                port:
                  number: 80
